fix(layout): prevent horizontal background overflow

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -273,6 +273,7 @@ h3 {
 
   @media only screen and (min-width: $viewport-lg-min) {
     left: 50%;
+    width: 50%;
   }
 
   .bg-element {
